# eml_extractor

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
data/: __metadata__  addresses.json  addresses2.json  message.html  message.txt
src/: main.rs
